version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/MeshWorkflowControl.rst.txt
.. vale off



:class:`MeshWorkflowControl`
============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.MeshWorkflowControl(internalObject: Any)
              MeshWorkflowControl(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext)

   Bases: :py:obj:`object`


   
   Object that wraps IDSEngineeringModelControl.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MeshWorkflowControl

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CanCheckPublicStateCallbackForIM`
            - CanCheckPublicStateCallbackForIM method.
          * - :py:attr:`~CanShowPublishStateIM`
            - CanShowPublishStateIM method.
          * - :py:attr:`~ConvertControl`
            - Converts the control to a ExternalPartEnclosure
          * - :py:attr:`~CopyPythonScriptContentToClipboard`
            - CopyPythonScriptContentToClipboard method.
          * - :py:attr:`~CopyPythonScriptPathToClipboard`
            - CopyPythonScriptPathToClipboard method.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetDomainBrowserAvailableScopes`
            - GetDomainBrowserAvailableScopes method.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetUnpublishedList`
            - GetUnpublishedList method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~PublishIMProp`
            - PublishIMProp method.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~RenameBasedOnType`
            - Renames applying the default name based on type.
          * - :py:attr:`~SetPropertyValue`
            - SetPropertyValue method.
          * - :py:attr:`~SetPublish`
            - SetPublish method.
          * - :py:attr:`~SetScopeMethodAndPattern`
            - SetScopeMethodAndPattern method.
          * - :py:attr:`~SetUnpublish`
            - SetUnpublish method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AppendData`
            - Gets or sets whether to append the mesh data being read to the current PrimeMesh model or to clear the model content before the mesh data is being read. The default value is false.
          * - :py:attr:`~AutomaticExternalScope`
            - Gets or sets whether to define programmatically the external scoping method and pattern for the external enclosure. The default value is false.
          * - :py:attr:`~BiasingIntensity`
            - Gets or sets the BiasingIntensity.
          * - :py:attr:`~BiasingModality`
            - Gets or sets the BiasingModality.
          * - :py:attr:`~BodyTypes`
            - Gets or sets the BodyTypes.
          * - :py:attr:`~CenterPlaneNormalOffset`
            - It defines the desired offset of the plane of the hemisphere from the model.
          * - :py:attr:`~CenterPosition`
            - It is defined by “Centered”, “Minimal”, and “User Defined”.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~ConstantHeight`
            - Height of a single layer of mesh elements.
          * - :py:attr:`~ConsumeAttachments`
            - 
          * - :py:attr:`~ControlDataDefinition`
            - This property is used to define if the control data is defined by value or by settings.
          * - :py:attr:`~ControlScopeDefinition`
            - It is defined by value or outcome.
          * - :py:attr:`~ControlScopeMethod`
            - The method can be label/zone/part.
          * - :py:attr:`~ControlScopeOutcome`
            - Gets or sets the ControlScopeOutcome.
          * - :py:attr:`~ControlScopePattern`
            - Gets or sets the ControlScopePattern.
          * - :py:attr:`~ControlString`
            - Gets the ControlString.
          * - :py:attr:`~ControlType`
            - Returns the type of the control.
          * - :py:attr:`~CoordinateSystem`
            - Gets or sets the Coordinate System object used to define the material point location.
          * - :py:attr:`~CreateAssemblyComponent`
            - Gets or sets the CreateAssemblyComponent.
          * - :py:attr:`~CreateFaceZone`
            - Gets or sets whether to create a new face zone.
          * - :py:attr:`~CreateGeometry`
            - Gets or sets the CreateGeometry.
          * - :py:attr:`~CreateQuads`
            - Gets or sets whether to create quadratic elements. The default value is false.
          * - :py:attr:`~CreateSolidComponent`
            - Gets or sets the CreateSolidComponent.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DefeatureTolerance`
            - Gets or sets the defeature tolerance applied during meshing.
          * - :py:attr:`~DefeatureToleranceDefineBy`
            - Specifies how the Defeature Tolerance is defined for the MultiZone mesher.
          * - :py:attr:`~DeleteEmptyVolumes`
            - This property is used to enable or disable the automatic deletion of empty topo volumes  during mesh to topology conversion. The default value is false.
          * - :py:attr:`~DeleteInputScope`
            - Gets or sets whether to delete of input scope after wrapping. The default value is false.
          * - :py:attr:`~DeleteMeshVolumes`
            - Gets or sets the DeleteMeshVolumes.
          * - :py:attr:`~DeleteZonePropertiesPropertyExpression`
            - Gets or sets the DeleteZonePropertiesPropertyExpression.
          * - :py:attr:`~DeltaX`
            - Gets or sets the DeltaX.
          * - :py:attr:`~DeltaY`
            - Gets or sets the DeltaY.
          * - :py:attr:`~DeltaZ`
            - Gets or sets the DeltaZ.
          * - :py:attr:`~DihedralAngle`
            - The dihedral angle is the angle between the normal vectors of two element faces.
          * - :py:attr:`~DirectoryName`
            - Gets or sets the DirectoryName.
          * - :py:attr:`~Distance`
            - Gets or sets the Distance.
          * - :py:attr:`~EdgeCleanup`
            - Gets or sets the EdgeCleanup.
          * - :py:attr:`~EdgeLabelName`
            - This property is used to rename the default edge label name generated during execution of step.
          * - :py:attr:`~ElementSize`
            - Define element size to achieve desired mesh results. User can achieve coarse, medium, or fine mesh by varying this value.
          * - :py:attr:`~ElementsPerGap`
            - Gets or sets the ElementsPerGap .
          * - :py:attr:`~EnableCheckpoint`
            - Flag whether to enable a checkpoint or not. The default value is false.
          * - :py:attr:`~EnableSmoothing`
            - Gets or sets the EnableSmoothing.
          * - :py:attr:`~ExcludeEnclosure`
            - Gets or sets whether to exclude the enclosure from the wrapper scope . The default value is false.
          * - :py:attr:`~ExternalLabelName`
            - This property is used to rename the default external label name generated during execution of step.
          * - :py:attr:`~ExternalScopeDefinition`
            - It is defined by value or outcome depending on if the External scope is defined manual by the user or defined based on a previous outcome.
          * - :py:attr:`~ExternalScopeMethod`
            - The method can be label/zone/part and it is applied to external region of enclosure.
          * - :py:attr:`~ExternalScopeOutcome`
            - If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
          * - :py:attr:`~ExternalScopePattern`
            - The value can be a name of a region or a predefined patterns to select multiple region names.
          * - :py:attr:`~FaceZoneByPart`
            - Gets or sets whether to define an independent face zone for each input part.
          * - :py:attr:`~FaceZoneName`
            - This property is used to define the name of the default face zone name generated during execution of step.
          * - :py:attr:`~FeatureSize`
            - Gets or sets the FeatureSize.
          * - :py:attr:`~FieldName`
            - Gets or sets the FieldName.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~FileFilter`
            - Gets or sets the FileFilter.
          * - :py:attr:`~Filename`
            - Assign full path to the filename would like to Import/Export.
          * - :py:attr:`~Filenames`
            - Assign paths with ‘|’ seperator to this property to read multiple files, pass without seperator if single file.
          * - :py:attr:`~FixedScopeDefinition`
            - It is defined by value or outcome.
          * - :py:attr:`~FixedScopeMethod`
            - The method can be label/zone/part.
          * - :py:attr:`~FixedScopeOutcome`
            - Gets or sets the FixedScopeOutcome.
          * - :py:attr:`~FixedScopePattern`
            - Gets or sets the FixedScopePattern.
          * - :py:attr:`~FreeEdgesAsFixed`
            - Gets or sets the FreeEdgesAsFixed.
          * - :py:attr:`~FreeFaceMeshType`
            - Specifies the type of elements for the MultiZone mesher free face mesh.
          * - :py:attr:`~GeometryFidelity`
            - Gets or sets the GeometryFidelity.
          * - :py:attr:`~GroupVolumes`
            - Gets or sets the GroupVolumes.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~GrowthRate`
            - Gradient of element size as each layer grows.
          * - :py:attr:`~HemisphereCenterModality`
            - This property is used to define the rule for the computation of the center of the hemispherical enclosure.
          * - :py:attr:`~HemisphereOrientationModality`
            - This property is used to define the rule for the computation of the orientation of the hemispherical enclosure.
          * - :py:attr:`~HexcoreTetLayerRelWidth`
            - Gets or sets the HexcoreTetLayerRelWidth.
          * - :py:attr:`~HorizontalScopeOutcome`
            - Gets or sets the HorizontalScopeOutcome.
          * - :py:attr:`~HorizontalScopePattern`
            - Gets or sets the HorizontalScopePattern.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~IgnoreOrientation`
            - Gets or sets the IgnoreOrientation.
          * - :py:attr:`~IgnoreSelfProximity`
            - Gets or sets the IgnoreSelfProximity.
          * - :py:attr:`~IgnoreSolidNames`
            - Gets or sets the IgnoreSolidNames.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~ImportSourceType`
            - Gets or sets the ImportSourceType.
          * - :py:attr:`~InflationGrowthRate`
            - Gets or sets gradient of layer height.
          * - :py:attr:`~InflationInitialHeight`
            - Gets or sets the height of the first inflation layer.
          * - :py:attr:`~InflationNumberOfLayers`
            - Gets or sets the number of inflation layers.
          * - :py:attr:`~InnerScopeDefinition`
            - It is defined by value or outcome depending on if the Inner scope is defined manually by the user or defined based on a previous outcome.
          * - :py:attr:`~InnerScopeMethod`
            - The method can be label/zone/part and it is applied to inner region of enclosure.
          * - :py:attr:`~InnerScopeOutcome`
            - If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
          * - :py:attr:`~InnerScopePattern`
            - The value can be a name of a region or a predefined patterns to select multiple region names.
          * - :py:attr:`~InputMeshScopeDefinition`
            - ..
          * - :py:attr:`~InputMeshScopeMethod`
            - ..
          * - :py:attr:`~InputMeshScopeOutcome`
            - ..
          * - :py:attr:`~InputMeshScopePattern`
            - ..
          * - :py:attr:`~InternalLabelName`
            - This property is used to rename the default Internal label name generated during execution of step.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~LabelName`
            - This property is used to rename the default label name generated during execution of step.
          * - :py:attr:`~Material`
            - Gets or sets the Material.
          * - :py:attr:`~MaterialName`
            - Gets or sets the Material Name.
          * - :py:attr:`~MaterialPointDefinition`
            - Gets or sets the material point definition type.
          * - :py:attr:`~MaterialPointType`
            - It defines the type of material point, it can be “Include” or “Exclude”.
          * - :py:attr:`~MaxEdgeLength`
            - Gets or sets the MaxEdgeLength.
          * - :py:attr:`~MaxHoleSize`
            - Gets or sets the MaxHoleSize.
          * - :py:attr:`~MaxIterations`
            - Gets or sets the MaxIterations .
          * - :py:attr:`~MaxSize`
            - Gets or sets the MaxSize.
          * - :py:attr:`~MeshFlowControl`
            - This property gives control over the flow of mesh during surface mesh generation. The supported modes are None, and Global Cartesian.
          * - :py:attr:`~MeshedVolumeLabelSuffix`
            - Gets or sets the suffix to be used when defining labels scoped to volumes meshed by the MultiZone mesher.
          * - :py:attr:`~MinSize`
            - Gets or sets the MinSize.
          * - :py:attr:`~MinimalNumberOfVolumetricLayers`
            - It determines the minimal number of layers of volume elements to be created around the scoped body.
          * - :py:attr:`~MinimalRadius`
            - It defines the desired minimal radius of the spherical enclosure.
          * - :py:attr:`~MorphSolverModality`
            - Gets or sets the MorphSolverModality.
          * - :py:attr:`~MorphableScopeDefinition`
            - It is defined by value or outcome.
          * - :py:attr:`~MorphableScopeMethod`
            - The method can be label/zone/part.
          * - :py:attr:`~MorphableScopeOutcome`
            - Gets or sets the MorphableScopeOutcome.
          * - :py:attr:`~MorphableScopePattern`
            - Gets or sets the MorphableScopePattern.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~Names`
            - Gets or sets the Names.
          * - :py:attr:`~NormalAngle`
            - Gets or sets the NormalAngle.
          * - :py:attr:`~NormalTolerance`
            - Gets or sets the NormalTolerance.
          * - :py:attr:`~NumberOfAttempts`
            - Number of attempts for mesh convergence.
          * - :py:attr:`~NumberOfLayers`
            - Number of layers of mesh elements.
          * - :py:attr:`~NumberOfRings`
            - Gets or sets the NumberOfRings.
          * - :py:attr:`~NumberOfThreads`
            - Gets or sets the NumberOfThreads.
          * - :py:attr:`~NumberOfVolumetricLayers`
            - Allows user to input number of volumetric layers of the enclosure.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~OffsetDistance`
            - Gets or sets the OffsetDistance.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~PartName`
            - This property allows user to rename the default part name generated during wrap operation.
          * - :py:attr:`~PercentageIncrement`
            - The number of volumetric Layers determines the number of layers. This property decides whether all the layers are an equal size (default 0.0) or they should gradually increase the size of volume element than previous element.
          * - :py:attr:`~PercentageSmoothing`
            - Gets or sets the PercentageSmoothing.
          * - :py:attr:`~PreserveBoundaryLayers`
            - Gets or sets the PreserveBoundaryLayers.
          * - :py:attr:`~ProcessGroups`
            - Gets or sets the ProcessGroups.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~PropertyName`
            - Gets or sets the PropertyName.
          * - :py:attr:`~PropertyValue`
            - Gets or sets the PropertyValue.
          * - :py:attr:`~RegionType`
            - It is defined by Material Point or External.
          * - :py:attr:`~Remesh`
            - Gets or sets whether to allow the remesh of already meshed volumes. The default value is false.
          * - :py:attr:`~RepairModel`
            - Gets or sets whether to repair the PrimeMesh model after the reading operation is executed. The default value is false.
          * - :py:attr:`~RestrictBoundaryNodes`
            - Gets or sets whether to restrict the boundary nodes displacement. The default value is true.
          * - :py:attr:`~ReverseDeformationsFilePath`
            - Gets or sets the ReverseDeformationsFilePath.
          * - :py:attr:`~ReverseSurfaceOrientation`
            - Reverse Surface Orientation. The default value is false.
          * - :py:attr:`~RigidScopeDefinition`
            - It is defined by value or outcome.
          * - :py:attr:`~RigidScopeMethod`
            - The method can be label/zone/part.
          * - :py:attr:`~RigidScopeOutcome`
            - Gets or sets the RigidScopeOutcome.
          * - :py:attr:`~RigidScopePattern`
            - Gets or sets the RigidScopePattern.
          * - :py:attr:`~RotationAngle`
            - Gets or sets the RotationAngle.
          * - :py:attr:`~ScaleFactor`
            - Scale Factor is used to scale shapes in different dimensions.
          * - :py:attr:`~ScopeDefinition`
            - It is defined by value or outcome.
          * - :py:attr:`~ScopeMethod`
            - The method can be label/zone/part.
          * - :py:attr:`~ScopeOutcome`
            - If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
          * - :py:attr:`~ScopePattern`
            - The value can be a name of a region or a predefined patterns to select multiple region names.
          * - :py:attr:`~ScriptFilename`
            - 
          * - :py:attr:`~SharedTopologyLabelName`
            - Gets or sets the name used as label to scope the shared topology faces which are automatically added as input mesh for MultiZone.
          * - :py:attr:`~SizeFieldName`
            - This property is used to define the name of the size field to apply to the meshing operation.
          * - :py:attr:`~SkipGroupRegEx`
            - Gets or sets the SkipGroupRegEx.
          * - :py:attr:`~SkipInteractiveSession`
            - Gets or sets whether to skip the interactive session on execution. The default value is false.
          * - :py:attr:`~SmoothingIterations`
            - Allows user to input number of iterations needed to achieve good mesh results.
          * - :py:attr:`~SmoothingPreserveVolume`
            - Gets or sets whether to enable and disable the volume preserving smoothing. If enabled, the smoothing will preserve the initial volume of the input. The default value is false.
          * - :py:attr:`~SourceScopeDefinition`
            - It is defined by value or outcome.
          * - :py:attr:`~SourceScopeMethod`
            - The method can be label/zone/part.
          * - :py:attr:`~SourceScopeOutcome`
            - Gets or sets the SourceScopeOutcome.
          * - :py:attr:`~SourceScopePattern`
            - Gets or sets the SourceScopePattern.
          * - :py:attr:`~SourceTargetScopeDefinition`
            - ..
          * - :py:attr:`~SourceTargetScopeMethod`
            - ..
          * - :py:attr:`~SourceTargetScopeOutcome`
            - ..
          * - :py:attr:`~SourceTargetScopePattern`
            - ..
          * - :py:attr:`~SphereCenterModality`
            - This property is used to define the rule for the computation of the center of the spherical enclosure.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~SurfaceMeshType`
            - This property gives control over what type of elements need to be generated in the mesh. The supported surface mesh types are Triangles and Quadrilaterals.
          * - :py:attr:`~SurfaceScopeModality`
            - The method can be label/zone/part.
          * - :py:attr:`~SurfaceTolerance`
            - Gets or sets the SurfaceTolerance.
          * - :py:attr:`~SweepingSize`
            - Gets or sets the constant size along the sweeping direction.
          * - :py:attr:`~TargetScopeDefinition`
            - It is defined by value or outcome.
          * - :py:attr:`~TargetScopeMethod`
            - The method can be label/zone/part.
          * - :py:attr:`~TargetScopeOutcome`
            - Gets or sets the TargetScopeOutcome.
          * - :py:attr:`~TargetScopePattern`
            - Gets or sets the TargetScopePattern.
          * - :py:attr:`~TargetSkewness`
            - Set Limit to the skewness of an element. Higher the skewness value, expecting a better mesh result.
          * - :py:attr:`~Thickness`
            - Gets or sets the Thickness to be assigned to the scoped zone.
          * - :py:attr:`~TopologyConformalConnection`
            - Gets or sets whether to preserve the topology connection for the newly created faces. The default value is false.
          * - :py:attr:`~TriangleCountReductionMode`
            - This property gives control over the mode/degree of triangle count reduction during surface mesh generation. The supported modes are None, Conservative and Aggressive.
          * - :py:attr:`~UnitsSystem`
            - Gets or sets the UnitsSystem.
          * - :py:attr:`~UnoDataEDXPath`
            - Gets or sets the UnoDataEDXPath.
          * - :py:attr:`~VariableName`
            - Gets or sets the VariableName.
          * - :py:attr:`~VariableType`
            - Gets or sets the VariableType.
          * - :py:attr:`~VariableValue`
            - Gets or sets the VariableValue.
          * - :py:attr:`~VerticalDirectionX`
            - Gets or sets the VerticalDirectionX.
          * - :py:attr:`~VerticalDirectionY`
            - Gets or sets the VerticalDirectionY.
          * - :py:attr:`~VerticalDirectionZ`
            - Gets or sets the VerticalDirectionZ.
          * - :py:attr:`~VerticalScopeOutcome`
            - Gets or sets the VerticalScopeOutcome.
          * - :py:attr:`~VerticalScopePattern`
            - Gets or sets the VerticalScopePattern.
          * - :py:attr:`~VerticalizeMaxSize`
            - Gets or sets the VerticalizeMaxSize.
          * - :py:attr:`~VerticalizeMinSize`
            - Gets or sets the VerticalizeMinSize.
          * - :py:attr:`~VerticalizeTargetNormal`
            - This property defines the target normal direction for the faces during verticalization. The available options are XPlus, YPlus, ZPlus, XMinus, YMinus, ZMinus.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~VolumeCushionPercentage`
            - Gets or sets the VolumeCushionPercentage.
          * - :py:attr:`~VolumeMeshType`
            - Type of Volume elements such as Tetrahedrons and Hex.
          * - :py:attr:`~VolumeScopeModality`
            - The method can be label/zone/part.
          * - :py:attr:`~VolumeZoneName`
            - This property is used to rename the default volume zone name generated during execution of step.
          * - :py:attr:`~WorkingDirectory`
            - Gets or sets the WorkingDirectory.
          * - :py:attr:`~WrapByParts`
            - Gets or sets whether to wrap each part separately. The default value is false.
          * - :py:attr:`~XAxis`
            - Gets or sets the XAxis.
          * - :py:attr:`~XCoordinate`
            - It defines the X Coordinate.
          * - :py:attr:`~YAxis`
            - Gets or sets the YAxis.
          * - :py:attr:`~YCoordinate`
            - It defines the Y Coordinate.
          * - :py:attr:`~ZAxis`
            - Gets or sets the ZAxis.
          * - :py:attr:`~ZCoordinate`
            - It defines the Z Coordinate.
          * - :py:attr:`~ZoneType`
            - Gets or sets the ZoneType.







Property detail
---------------
.. py:property:: AppendData
   :type: Optional[bool]


   
   Gets or sets whether to append the mesh data being read to the current PrimeMesh model or to clear the model content before the mesh data is being read. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutomaticExternalScope
   :type: Optional[bool]


   
   Gets or sets whether to define programmatically the external scoping method and pattern for the external enclosure. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: BiasingIntensity
   :type: Optional[float]


   
   Gets or sets the BiasingIntensity.
















   ..
       !! processed by numpydoc !!

.. py:property:: BiasingModality
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MeshWorkflowMorphingBiasingType]


   
   Gets or sets the BiasingModality.
















   ..
       !! processed by numpydoc !!

.. py:property:: BodyTypes
   :type: Optional[str]


   
   Gets or sets the BodyTypes.
















   ..
       !! processed by numpydoc !!

.. py:property:: CenterPlaneNormalOffset
   :type: Optional[Ansys.Core.Units.Quantity]


   
   It defines the desired offset of the plane of the hemisphere from the model.
















   ..
       !! processed by numpydoc !!

.. py:property:: CenterPosition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SphereCenterDefinitionType]


   
   It is defined by “Centered”, “Minimal”, and “User Defined”.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConstantHeight
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Height of a single layer of mesh elements.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConsumeAttachments
   :type: Optional[bool]


.. py:property:: ControlDataDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlDataDefinedByType]


   
   This property is used to define if the control data is defined by value or by settings.
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome. 
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlScopeOutcome
   :type: Optional[int]


   
   Gets or sets the ControlScopeOutcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlScopePattern
   :type: Optional[str]


   
   Gets or sets the ControlScopePattern.
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlString
   :type: Optional[str]


   
   Gets the ControlString.
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlType]


   
   Returns the type of the control.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]


   
   Gets or sets the Coordinate System object used to define the material point location.
















   ..
       !! processed by numpydoc !!

.. py:property:: CreateAssemblyComponent
   :type: Optional[bool]


   
   Gets or sets the CreateAssemblyComponent.
















   ..
       !! processed by numpydoc !!

.. py:property:: CreateFaceZone
   :type: Optional[bool]


   
   Gets or sets whether to create a new face zone.
















   ..
       !! processed by numpydoc !!

.. py:property:: CreateGeometry
   :type: Optional[bool]


   
   Gets or sets the CreateGeometry.
















   ..
       !! processed by numpydoc !!

.. py:property:: CreateQuads
   :type: Optional[bool]


   
   Gets or sets whether to create quadratic elements. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: CreateSolidComponent
   :type: Optional[bool]


   
   Gets or sets the CreateSolidComponent.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DefeatureTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the defeature tolerance applied during meshing.
















   ..
       !! processed by numpydoc !!

.. py:property:: DefeatureToleranceDefineBy
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.DefeatureToleranceDefineBy]


   
   Specifies how the Defeature Tolerance is defined for the MultiZone mesher.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeleteEmptyVolumes
   :type: Optional[bool]


   
   This property is used to enable or disable the automatic deletion of empty topo volumes  during mesh to topology conversion. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeleteInputScope
   :type: Optional[bool]


   
   Gets or sets whether to delete of input scope after wrapping. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeleteMeshVolumes
   :type: Optional[bool]


   
   Gets or sets the DeleteMeshVolumes.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeleteZonePropertiesPropertyExpression
   :type: Optional[str]


   
   Gets or sets the DeleteZonePropertiesPropertyExpression.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeltaX
   :type: Optional[float]


   
   Gets or sets the DeltaX.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeltaY
   :type: Optional[float]


   
   Gets or sets the DeltaY.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeltaZ
   :type: Optional[float]


   
   Gets or sets the DeltaZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: DihedralAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   The dihedral angle is the angle between the normal vectors of two element faces.
















   ..
       !! processed by numpydoc !!

.. py:property:: DirectoryName
   :type: Optional[str]


   
   Gets or sets the DirectoryName.
















   ..
       !! processed by numpydoc !!

.. py:property:: Distance
   :type: Optional[float]


   
   Gets or sets the Distance.
















   ..
       !! processed by numpydoc !!

.. py:property:: EdgeCleanup
   :type: Optional[bool]


   
   Gets or sets the EdgeCleanup.
















   ..
       !! processed by numpydoc !!

.. py:property:: EdgeLabelName
   :type: Optional[str]


   
   This property is used to rename the default edge label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Define element size to achieve desired mesh results. User can achieve coarse, medium, or fine mesh by varying this value.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementsPerGap
   :type: Optional[int]


   
   Gets or sets the ElementsPerGap .
















   ..
       !! processed by numpydoc !!

.. py:property:: EnableCheckpoint
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.CheckpointDefinitionType]


   
   Flag whether to enable a checkpoint or not. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: EnableSmoothing
   :type: Optional[bool]


   
   Gets or sets the EnableSmoothing.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExcludeEnclosure
   :type: Optional[bool]


   
   Gets or sets whether to exclude the enclosure from the wrapper scope . The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalLabelName
   :type: Optional[str]


   
   This property is used to rename the default external label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome depending on if the External scope is defined manual by the user or defined based on a previous outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part and it is applied to external region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopePattern
   :type: Optional[str]


   
   The value can be a name of a region or a predefined patterns to select multiple region names.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceZoneByPart
   :type: Optional[bool]


   
   Gets or sets whether to define an independent face zone for each input part.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceZoneName
   :type: Optional[str]


   
   This property is used to define the name of the default face zone name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: FeatureSize
   :type: Optional[float]


   
   Gets or sets the FeatureSize.
















   ..
       !! processed by numpydoc !!

.. py:property:: FieldName
   :type: Optional[str]


   
   Gets or sets the FieldName.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: FileFilter
   :type: Optional[str]


   
   Gets or sets the FileFilter.
















   ..
       !! processed by numpydoc !!

.. py:property:: Filename
   :type: Optional[str]


   
   Assign full path to the filename would like to Import/Export.
















   ..
       !! processed by numpydoc !!

.. py:property:: Filenames
   :type: Optional[str]


   
   Assign paths with ‘|’ seperator to this property to read multiple files, pass without seperator if single file.
















   ..
       !! processed by numpydoc !!

.. py:property:: FixedScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome. 
















   ..
       !! processed by numpydoc !!

.. py:property:: FixedScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: FixedScopeOutcome
   :type: Optional[int]


   
   Gets or sets the FixedScopeOutcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: FixedScopePattern
   :type: Optional[str]


   
   Gets or sets the FixedScopePattern.
















   ..
       !! processed by numpydoc !!

.. py:property:: FreeEdgesAsFixed
   :type: Optional[bool]


   
   Gets or sets the FreeEdgesAsFixed.
















   ..
       !! processed by numpydoc !!

.. py:property:: FreeFaceMeshType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.FreeFaceMeshType]


   
   Specifies the type of elements for the MultiZone mesher free face mesh.
















   ..
       !! processed by numpydoc !!

.. py:property:: GeometryFidelity
   :type: Optional[float]


   
   Gets or sets the GeometryFidelity.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupVolumes
   :type: Optional[bool]


   
   Gets or sets the GroupVolumes.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: GrowthRate
   :type: Optional[float]


   
   Gradient of element size as each layer grows. 
















   ..
       !! processed by numpydoc !!

.. py:property:: HemisphereCenterModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.HemisphereCenterDefinitionType]


   
   This property is used to define the rule for the computation of the center of the hemispherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: HemisphereOrientationModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.HemisphereOrientationDefinitionType]


   
   This property is used to define the rule for the computation of the orientation of the hemispherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: HexcoreTetLayerRelWidth
   :type: Optional[float]


   
   Gets or sets the HexcoreTetLayerRelWidth.
















   ..
       !! processed by numpydoc !!

.. py:property:: HorizontalScopeOutcome
   :type: Optional[int]


   
   Gets or sets the HorizontalScopeOutcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: HorizontalScopePattern
   :type: Optional[str]


   
   Gets or sets the HorizontalScopePattern.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IgnoreOrientation
   :type: Optional[bool]


   
   Gets or sets the IgnoreOrientation.
















   ..
       !! processed by numpydoc !!

.. py:property:: IgnoreSelfProximity
   :type: Optional[bool]


   
   Gets or sets the IgnoreSelfProximity.
















   ..
       !! processed by numpydoc !!

.. py:property:: IgnoreSolidNames
   :type: Optional[bool]


   
   Gets or sets the IgnoreSolidNames.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: ImportSourceType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MeshWorkflowImportModalityType]


   
   Gets or sets the ImportSourceType.
















   ..
       !! processed by numpydoc !!

.. py:property:: InflationGrowthRate
   :type: Optional[float]


   
   Gets or sets gradient of layer height.
















   ..
       !! processed by numpydoc !!

.. py:property:: InflationInitialHeight
   :type: Optional[float]


   
   Gets or sets the height of the first inflation layer.
















   ..
       !! processed by numpydoc !!

.. py:property:: InflationNumberOfLayers
   :type: Optional[int]


   
   Gets or sets the number of inflation layers.
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome depending on if the Inner scope is defined manually by the user or defined based on a previous outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part and it is applied to inner region of enclosure. 
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopePattern
   :type: Optional[str]


   
   The value can be a name of a region or a predefined patterns to select multiple region names.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputMeshScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
















   ..
       !! processed by numpydoc !!

.. py:property:: InputMeshScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
















   ..
       !! processed by numpydoc !!

.. py:property:: InputMeshScopeOutcome
   :type: Optional[int]


   
















   ..
       !! processed by numpydoc !!

.. py:property:: InputMeshScopePattern
   :type: Optional[str]


   
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalLabelName
   :type: Optional[str]


   
   This property is used to rename the default Internal label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelControlAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: LabelName
   :type: Optional[str]


   
   This property is used to rename the default label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: Material
   :type: Optional[str]


   
   Gets or sets the Material.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialName
   :type: Optional[str]


   
   Gets or sets the Material Name.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialPointDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MaterialPointDefineByType]


   
   Gets or sets the material point definition type.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialPointType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MaterialPointType]


   
   It defines the type of material point, it can be “Include” or “Exclude”.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaxEdgeLength
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the MaxEdgeLength.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaxHoleSize
   :type: Optional[float]


   
   Gets or sets the MaxHoleSize.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaxIterations
   :type: Optional[int]


   
   Gets or sets the MaxIterations .
















   ..
       !! processed by numpydoc !!

.. py:property:: MaxSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the MaxSize.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshFlowControl
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MeshFlowControl]


   
   This property gives control over the flow of mesh during surface mesh generation. The supported modes are None, and Global Cartesian.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshedVolumeLabelSuffix
   :type: Optional[str]


   
   Gets or sets the suffix to be used when defining labels scoped to volumes meshed by the MultiZone mesher.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the MinSize.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimalNumberOfVolumetricLayers
   :type: Optional[int]


   
   It determines the minimal number of layers of volume elements to be created around the scoped body.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimalRadius
   :type: Optional[Ansys.Core.Units.Quantity]


   
   It defines the desired minimal radius of the spherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: MorphSolverModality
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MeshWorkflowMorphingSolverType]


   
   Gets or sets the MorphSolverModality.
















   ..
       !! processed by numpydoc !!

.. py:property:: MorphableScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome. 
















   ..
       !! processed by numpydoc !!

.. py:property:: MorphableScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: MorphableScopeOutcome
   :type: Optional[int]


   
   Gets or sets the MorphableScopeOutcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: MorphableScopePattern
   :type: Optional[str]


   
   Gets or sets the MorphableScopePattern.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Names
   :type: Optional[str]


   
   Gets or sets the Names.
















   ..
       !! processed by numpydoc !!

.. py:property:: NormalAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the NormalAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: NormalTolerance
   :type: Optional[float]


   
   Gets or sets the NormalTolerance.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfAttempts
   :type: Optional[int]


   
   Number of attempts for mesh convergence.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfLayers
   :type: Optional[int]


   
   Number of layers of mesh elements. 
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfRings
   :type: Optional[int]


   
   Gets or sets the NumberOfRings.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfThreads
   :type: Optional[int]


   
   Gets or sets the NumberOfThreads.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfVolumetricLayers
   :type: Optional[int]


   
   Allows user to input number of volumetric layers of the enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: OffsetDistance
   :type: Optional[float]


   
   Gets or sets the OffsetDistance.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: PartName
   :type: Optional[str]


   
   This property allows user to rename the default part name generated during wrap operation.
















   ..
       !! processed by numpydoc !!

.. py:property:: PercentageIncrement
   :type: Optional[float]


   
   The number of volumetric Layers determines the number of layers. This property decides whether all the layers are an equal size (default 0.0) or they should gradually increase the size of volume element than previous element.
















   ..
       !! processed by numpydoc !!

.. py:property:: PercentageSmoothing
   :type: Optional[int]


   
   Gets or sets the PercentageSmoothing.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreserveBoundaryLayers
   :type: Optional[bool]


   
   Gets or sets the PreserveBoundaryLayers.
















   ..
       !! processed by numpydoc !!

.. py:property:: ProcessGroups
   :type: Optional[bool]


   
   Gets or sets the ProcessGroups.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: PropertyName
   :type: Optional[str]


   
   Gets or sets the PropertyName.
















   ..
       !! processed by numpydoc !!

.. py:property:: PropertyValue
   :type: Optional[str]


   
   Gets or sets the PropertyValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: RegionType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.WrapperRegionType]


   
   It is defined by Material Point or External.
















   ..
       !! processed by numpydoc !!

.. py:property:: Remesh
   :type: Optional[bool]


   
   Gets or sets whether to allow the remesh of already meshed volumes. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: RepairModel
   :type: Optional[bool]


   
   Gets or sets whether to repair the PrimeMesh model after the reading operation is executed. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: RestrictBoundaryNodes
   :type: Optional[bool]


   
   Gets or sets whether to restrict the boundary nodes displacement. The default value is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReverseDeformationsFilePath
   :type: Optional[str]


   
   Gets or sets the ReverseDeformationsFilePath.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReverseSurfaceOrientation
   :type: Optional[bool]


   
   Reverse Surface Orientation. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: RigidScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome. 
















   ..
       !! processed by numpydoc !!

.. py:property:: RigidScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: RigidScopeOutcome
   :type: Optional[int]


   
   Gets or sets the RigidScopeOutcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: RigidScopePattern
   :type: Optional[str]


   
   Gets or sets the RigidScopePattern.
















   ..
       !! processed by numpydoc !!

.. py:property:: RotationAngle
   :type: Optional[float]


   
   Gets or sets the RotationAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScaleFactor
   :type: Optional[float]


   
   Scale Factor is used to scale shapes in different dimensions.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome. 
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopePattern
   :type: Optional[str]


   
   The value can be a name of a region or a predefined patterns to select multiple region names.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScriptFilename
   :type: Optional[str]


.. py:property:: SharedTopologyLabelName
   :type: Optional[str]


   
   Gets or sets the name used as label to scope the shared topology faces which are automatically added as input mesh for MultiZone.
















   ..
       !! processed by numpydoc !!

.. py:property:: SizeFieldName
   :type: Optional[str]


   
   This property is used to define the name of the size field to apply to the meshing operation.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipGroupRegEx
   :type: Optional[str]


   
   Gets or sets the SkipGroupRegEx.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipInteractiveSession
   :type: Optional[bool]


   
   Gets or sets whether to skip the interactive session on execution. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: SmoothingIterations
   :type: Optional[int]


   
   Allows user to input number of iterations needed to achieve good mesh results.
















   ..
       !! processed by numpydoc !!

.. py:property:: SmoothingPreserveVolume
   :type: Optional[bool]


   
   Gets or sets whether to enable and disable the volume preserving smoothing. If enabled, the smoothing will preserve the initial volume of the input. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome. 
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceScopeOutcome
   :type: Optional[int]


   
   Gets or sets the SourceScopeOutcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceScopePattern
   :type: Optional[str]


   
   Gets or sets the SourceScopePattern.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceTargetScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceTargetScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceTargetScopeOutcome
   :type: Optional[int]


   
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceTargetScopePattern
   :type: Optional[str]


   
















   ..
       !! processed by numpydoc !!

.. py:property:: SphereCenterModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SphereCenterDefinitionType]


   
   This property is used to define the rule for the computation of the center of the spherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: SurfaceMeshType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SurfaceMeshType]


   
   This property gives control over what type of elements need to be generated in the mesh. The supported surface mesh types are Triangles and Quadrilaterals. 
















   ..
       !! processed by numpydoc !!

.. py:property:: SurfaceScopeModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: SurfaceTolerance
   :type: Optional[float]


   
   Gets or sets the SurfaceTolerance.
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepingSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the constant size along the sweeping direction.
















   ..
       !! processed by numpydoc !!

.. py:property:: TargetScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome. 
















   ..
       !! processed by numpydoc !!

.. py:property:: TargetScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: TargetScopeOutcome
   :type: Optional[int]


   
   Gets or sets the TargetScopeOutcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: TargetScopePattern
   :type: Optional[str]


   
   Gets or sets the TargetScopePattern.
















   ..
       !! processed by numpydoc !!

.. py:property:: TargetSkewness
   :type: Optional[float]


   
   Set Limit to the skewness of an element. Higher the skewness value, expecting a better mesh result.
















   ..
       !! processed by numpydoc !!

.. py:property:: Thickness
   :type: Optional[float]


   
   Gets or sets the Thickness to be assigned to the scoped zone.
















   ..
       !! processed by numpydoc !!

.. py:property:: TopologyConformalConnection
   :type: Optional[bool]


   
   Gets or sets whether to preserve the topology connection for the newly created faces. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: TriangleCountReductionMode
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.TriangleCountReductionMode]


   
   This property gives control over the mode/degree of triangle count reduction during surface mesh generation. The supported modes are None, Conservative and Aggressive.
















   ..
       !! processed by numpydoc !!

.. py:property:: UnitsSystem
   :type: Optional[Ansys.Mechanical.DataModel.Enums.WBUnitSystemType]


   
   Gets or sets the UnitsSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: UnoDataEDXPath
   :type: Optional[str]


   
   Gets or sets the UnoDataEDXPath.
















   ..
       !! processed by numpydoc !!

.. py:property:: VariableName
   :type: Optional[str]


   
   Gets or sets the VariableName.
















   ..
       !! processed by numpydoc !!

.. py:property:: VariableType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.PythonVariableType]


   
   Gets or sets the VariableType.
















   ..
       !! processed by numpydoc !!

.. py:property:: VariableValue
   :type: Optional[str]


   
   Gets or sets the VariableValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: VerticalDirectionX
   :type: Optional[float]


   
   Gets or sets the VerticalDirectionX.
















   ..
       !! processed by numpydoc !!

.. py:property:: VerticalDirectionY
   :type: Optional[float]


   
   Gets or sets the VerticalDirectionY.
















   ..
       !! processed by numpydoc !!

.. py:property:: VerticalDirectionZ
   :type: Optional[float]


   
   Gets or sets the VerticalDirectionZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: VerticalScopeOutcome
   :type: Optional[int]


   
   Gets or sets the VerticalScopeOutcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: VerticalScopePattern
   :type: Optional[str]


   
   Gets or sets the VerticalScopePattern.
















   ..
       !! processed by numpydoc !!

.. py:property:: VerticalizeMaxSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the VerticalizeMaxSize.
















   ..
       !! processed by numpydoc !!

.. py:property:: VerticalizeMinSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the VerticalizeMinSize.
















   ..
       !! processed by numpydoc !!

.. py:property:: VerticalizeTargetNormal
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.VerticalizeTargetNormal]


   
   This property defines the target normal direction for the faces during verticalization. The available options are XPlus, YPlus, ZPlus, XMinus, YMinus, ZMinus.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: VolumeCushionPercentage
   :type: Optional[float]


   
   Gets or sets the VolumeCushionPercentage.
















   ..
       !! processed by numpydoc !!

.. py:property:: VolumeMeshType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.VolumeMeshType]


   
   Type of Volume elements such as Tetrahedrons and Hex.
















   ..
       !! processed by numpydoc !!

.. py:property:: VolumeScopeModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: VolumeZoneName
   :type: Optional[str]


   
   This property is used to rename the default volume zone name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: WorkingDirectory
   :type: Optional[str]


   
   Gets or sets the WorkingDirectory.
















   ..
       !! processed by numpydoc !!

.. py:property:: WrapByParts
   :type: Optional[bool]


   
   Gets or sets whether to wrap each part separately. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: XAxis
   :type: Optional[float]


   
   Gets or sets the XAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: XCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]


   
   It defines the X Coordinate.
















   ..
       !! processed by numpydoc !!

.. py:property:: YAxis
   :type: Optional[float]


   
   Gets or sets the YAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: YCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]


   
   It defines the Y Coordinate.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZAxis
   :type: Optional[float]


   
   Gets or sets the ZAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]


   
   It defines the Z Coordinate.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZoneType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MeshWorkflowZoneType]


   
   Gets or sets the ZoneType.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CanCheckPublicStateCallbackForIM() -> bool

   
   CanCheckPublicStateCallbackForIM method.

   ..
       !! processed by numpydoc !!

.. py:method:: CanShowPublishStateIM() -> bool

   
   CanShowPublishStateIM method.

   ..
       !! processed by numpydoc !!

.. py:method:: ConvertControl(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlType) -> None

   
   Converts the control to a ExternalPartEnclosure

   ..
       !! processed by numpydoc !!

.. py:method:: CopyPythonScriptContentToClipboard() -> None

   
   CopyPythonScriptContentToClipboard method.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyPythonScriptPathToClipboard() -> None

   
   CopyPythonScriptPathToClipboard method.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]
               GetChildren(category: Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory, recurses: bool, children: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetDomainBrowserAvailableScopes(path: str) -> List[System.Collections.Generic.Dictionary[str, Any]]

   
   GetDomainBrowserAvailableScopes method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(id: int) -> str
               GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetUnpublishedList() -> List[System.Collections.Generic.Dictionary[str, Any]]

   
   GetUnpublishedList method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool
               IsPropertyEditable(propName: str) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool
               IsPropertyVisible(propName: str) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: PublishIMProp() -> None

   
   PublishIMProp method.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: RenameBasedOnType() -> None

   
   Renames applying the default name based on type.

   ..
       !! processed by numpydoc !!

.. py:method:: SetPropertyValue(id: int, value: str, validate: int) -> None

   
   SetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetPublish(id: int) -> None

   
   SetPublish method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetScopeMethodAndPattern(methodId: int, method: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType, patternId: int, pattern: str) -> None

   
   SetScopeMethodAndPattern method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetUnpublish(id: int) -> None

   
   SetUnpublish method.

   ..
       !! processed by numpydoc !!



.. vale on